--- a/README
+++ b/README
@@ -1,4 +1,30 @@
 Awesome HTTP cache
 ==================
 
+`curl http://your-cache-host.herokuapp.com/http://foobar.com/path/to/package.tar.gz`
 
+INSTALL
+-------
+
+```bash
+heroku create --buildpack git://github.com/kr/heroku-buildpack-go.git
+heroku config:add AWS_ACCESS_KEY_ID=somekey AWS_SECRET_ACCESS_KEY=some-secret-key S3_BUCKET_NAME=http-cache-test
+git push heroku master
+```
+
+TODO
+----
+
+Add support for environment variables as setting to avoid exposing the
+AWS keys in the logs.
+
+S3 doesn't support Transfer-Encoding: chunked for upload which is injected
+by Go if the Content-Length header is not set.
+
+Support cache invalidation
+
+Don't use the Scheme in the S3 path
+
+Use Multi-Part uploads for big files
+
+Add signed urls support to S3
